--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "license": "ISC",
     "type": "commonjs",
     "devDependencies": {
-        "@types/node": "^22.15.21",
+        "@types/form-data": "^2.2.1",
+        "@types/node": "^22.15.33",
         "@types/phoenix": "^1.6.6",
+        "@types/ws": "^8.18.1",
         "nodemon": "^3.1.10",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     },
     "dependencies": {
-        "axios": "^1.9.0",
-        "discord.js": "^14.19.3",
-        "dotenv": "^16.5.0",
-        "form-data": "^4.0.2",
-        "phoenix": "^1.7.21"
+        "axios": "^1.10.0",
+        "discord.js": "^14.21.0",
+        "dotenv": "^16.6.0",
+        "form-data": "^4.0.3",
+        "phoenix": "^1.7.21",
+        "ws": "^8.18.2"
     }
 }
